moved button, fixed mobile overflow issues

--- a/index.css
+++ b/index.css
@@ -5,6 +5,13 @@
     src: url(fonts/Junicode-Italic.ttf);
 }
 
+@font-face {
+    font-family: Junicode;
+    src: url(fonts/Junicode.ttf)
+}
+
+/* */
+
 * {
     box-sizing: border-box;
 }
@@ -64,6 +71,11 @@ canvas {
     height: 20px;
     width: 20px;
     background-color: blue;
+}
+
+#menu-dot {
+    background-color: red;
+    display: none;
 }
 
 /* individual button colors */
@@ -135,17 +147,11 @@ canvas {
 
 /* end individual button color */
 
-#menu-dot {
-    background-color: red;
-    display: none;
-}
-
 @media only screen and (max-width: 600px) {
-    body {
-        overflow: hidden;
-    }
+    html, body {
+        overflow:hidden 
+    } 
     .container {
-        overflow: hidden;
         position: relative;
     }
     #top-menu {
